# Kandha

./: .env.example  .gitignore  .npmrc  CLAUDE.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json  vercel.json
apps/api/: .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/evals/: __init__.py  framework.py  runner.py  test_cases.py
apps/api/middleware/: __init__.py  auth.py  observability.py  rate_limit.py  sanitize.py
apps/api/models/: __init__.py  agent.py  analysis.py
apps/api/prompts/: analyze_chain.md  infra_gen.md  system.md
apps/api/routers/: __init__.py  agent.py  analyze.py  evals.py  infra.py
apps/api/services/: __init__.py  cache.py  dify.py  gmi.py  hydra.py  hydra_knowledge.py  parser.py  photon_guard.py  prompt_chains.py
apps/api/templates/k8s/: deployment.yaml.j2  hpa.yaml.j2  ingress.yaml.j2  namespace.yaml.j2  service.yaml.j2
apps/web/: .env.example  middleware.ts  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/lib/: api.ts
infra/photon/: guard.py
infra/scripts/: 01-base.sh  02-k3s.sh
scripts/: env.mjs
tasks/: lessons.md  todo.md
turbo/generators/: config.ts
turbo/generators/templates/: index.ts.hbs  package.json.hbs  tsconfig.json.hbs
(+4 files in other folders)
